--- a/astro/src/styles/global.css
+++ b/astro/src/styles/global.css
@@ -1216,17 +1216,15 @@ p.acknowledgement-text,
 }
 .testimonials .carousel-item,
 #testimonialCarousel .carousel-item {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: relative;
+  display: none;
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.35s ease-in-out;
   pointer-events: none;
 }
 .testimonials .carousel-item.active,
 #testimonialCarousel .carousel-item.active {
-  position: relative;
+  display: block;
   opacity: 1;
   pointer-events: auto;
 }
