--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -68,8 +68,8 @@ import { CONTACT } from "../lib/constants";
       <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
         <article class="service-card shadow-md">
           <img
-            src="/assets/images/Home/Corporate Events Hero Image.jpg"
-            srcset="/assets/images/Home/Corporate Events Hero Image.jpg 1600w, /assets/images/Home/Corporate Events Hero Image.jpg 1200w, /assets/images/Home/Corporate Events Hero Image.jpg 800w, /assets/images/Home/Corporate Events Hero Image.jpg 480w"
+            src="/assets/images/Home/Corporate%20Events%20Hero%20Image.jpg"
+            srcset="/assets/images/Home/Corporate%20Events%20Hero%20Image.jpg 1600w, /assets/images/Home/Corporate%20Events%20Hero%20Image.jpg 1200w, /assets/images/Home/Corporate%20Events%20Hero%20Image.jpg 800w, /assets/images/Home/Corporate%20Events%20Hero%20Image.jpg 480w"
             sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
             alt="Corporate event planning and production services in Perth and Western Australia"
             class="card-img-top"
@@ -89,8 +89,8 @@ import { CONTACT } from "../lib/constants";
         </article>
         <article class="service-card shadow-md">
           <img
-            src="/assets/images/Home/Creative Workshops Hero Image.jpg"
-            srcset="/assets/images/Home/Creative Workshops Hero Image.jpg 1600w, /assets/images/Home/Creative Workshops Hero Image.jpg 1200w, /assets/images/Home/Creative Workshops Hero Image.jpg 800w, /assets/images/Home/Creative Workshops Hero Image.jpg 480w"
+            src="/assets/images/Home/Creative%20Workshops%20Hero%20Image.jpg"
+            srcset="/assets/images/Home/Creative%20Workshops%20Hero%20Image.jpg 1600w, /assets/images/Home/Creative%20Workshops%20Hero%20Image.jpg 1200w, /assets/images/Home/Creative%20Workshops%20Hero%20Image.jpg 800w, /assets/images/Home/Creative%20Workshops%20Hero%20Image.jpg 480w"
             sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
             alt="Creative workshops for kids and adults in Perth and Western Australia"
             class="card-img-top"
@@ -110,8 +110,8 @@ import { CONTACT } from "../lib/constants";
         </article>
         <article class="service-card shadow-md">
           <img
-            src="/assets/images/Home/Custom Displays Hero Image.jpg"
-            srcset="/assets/images/Home/Custom Displays Hero Image.jpg 1600w, /assets/images/Home/Custom Displays Hero Image.jpg 1200w, /assets/images/Home/Custom Displays Hero Image.jpg 800w, /assets/images/Home/Custom Displays Hero Image.jpg 480w"
+            src="/assets/images/Home/Custom%20Displays%20Hero%20Image.jpg"
+            srcset="/assets/images/Home/Custom%20Displays%20Hero%20Image.jpg 1600w, /assets/images/Home/Custom%20Displays%20Hero%20Image.jpg 1200w, /assets/images/Home/Custom%20Displays%20Hero%20Image.jpg 800w, /assets/images/Home/Custom%20Displays%20Hero%20Image.jpg 480w"
             sizes="(max-width: 640px) 100vw, (max-width: 1024px) 50vw, 33vw"
             alt="Custom displays and installations for events in Perth and Western Australia"
             class="card-img-top"
