--- a/astro/src/layouts/BaseLayout.astro
+++ b/astro/src/layouts/BaseLayout.astro
@@ -58,6 +58,7 @@ const mainPadding = isHome ? "" : "pt-2";
     </main>
     <Footer />
     <script src="/scripts/accordion.js" defer></script>
+    <script src="/scripts/navbar.js" defer></script>
     <script src="/scripts/anchor-nav.js" defer></script>
   </body>
 </html>
